Implement project auto creation

--- a/src/main/resources/org/jenkinsci/plugins/DependencyTrack/DependencyTrackPublisher/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/DependencyTrack/DependencyTrackPublisher/config.properties
@@ -14,6 +14,9 @@
 
 projectId=Dependency-Track project
 artifact=Artifact
+projectNameAndVersion=Define project by name and version. Takes precedence over selected project.
+projectName=Name
+projectVersion=Version
 artifactType.choose=Choose Artifact Type
 artifactType.scanResult=Dependency-Check Scan Result (XML)
 artifactType.bom=Software Bill of Materials (CycloneDX or SPDX)
